--- a/C3/W2/ungraded_labs/C3_W2_Lab_1_imdb.ipynb
+++ b/C3/W2/ungraded_labs/C3_W2_Lab_1_imdb.ipynb
@@ -33,14 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "vqB3GzBorwBh"
    },
    "outputs": [],
    "source": [
     "# Install this package if running on your local machine\n",
-    "# !pip install -q tensorflow-datasets"
+    "!pip install -q tensorflow-datasets"
    ]
   },
   {
@@ -54,11 +54,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "_IoM4VFxWpMR"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-08-12 23:13:15.620591: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow_datasets as tfds\n",
     "\n",
@@ -68,11 +77,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "J3PEarpKw9_j"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tfds.core.DatasetInfo(\n",
+      "    name='imdb_reviews',\n",
+      "    full_name='imdb_reviews/plain_text/1.0.0',\n",
+      "    description=\"\"\"\n",
+      "    Large Movie Review Dataset.\n",
+      "    This is a dataset for binary sentiment classification containing substantially more data than previous benchmark datasets. We provide a set of 25,000 highly polar movie reviews for training, and 25,000 for testing. There is additional unlabeled data for use as well.\n",
+      "    \"\"\",\n",
+      "    config_description=\"\"\"\n",
+      "    Plain text\n",
+      "    \"\"\",\n",
+      "    homepage='http://ai.stanford.edu/~amaas/data/sentiment/',\n",
+      "    data_path='~/tensorflow_datasets/imdb_reviews/plain_text/1.0.0',\n",
+      "    file_format=tfrecord,\n",
+      "    download_size=80.23 MiB,\n",
+      "    dataset_size=129.83 MiB,\n",
+      "    features=FeaturesDict({\n",
+      "        'label': ClassLabel(shape=(), dtype=tf.int64, num_classes=2),\n",
+      "        'text': Text(shape=(), dtype=tf.string),\n",
+      "    }),\n",
+      "    supervised_keys=('text', 'label'),\n",
+      "    disable_shuffling=False,\n",
+      "    splits={\n",
+      "        'test': <SplitInfo num_examples=25000, num_shards=1>,\n",
+      "        'train': <SplitInfo num_examples=25000, num_shards=1>,\n",
+      "        'unsupervised': <SplitInfo num_examples=50000, num_shards=1>,\n",
+      "    },\n",
+      "    citation=\"\"\"@InProceedings{maas-EtAl:2011:ACL-HLT2011,\n",
+      "      author    = {Maas, Andrew L.  and  Daly, Raymond E.  and  Pham, Peter T.  and  Huang, Dan  and  Ng, Andrew Y.  and  Potts, Christopher},\n",
+      "      title     = {Learning Word Vectors for Sentiment Analysis},\n",
+      "      booktitle = {Proceedings of the 49th Annual Meeting of the Association for Computational Linguistics: Human Language Technologies},\n",
+      "      month     = {June},\n",
+      "      year      = {2011},\n",
+      "      address   = {Portland, Oregon, USA},\n",
+      "      publisher = {Association for Computational Linguistics},\n",
+      "      pages     = {142--150},\n",
+      "      url       = {http://www.aclweb.org/anthology/P11-1015}\n",
+      "    }\"\"\",\n",
+      ")\n"
+     ]
+    }
+   ],
    "source": [
     "# Print information about the dataset\n",
     "print(info)"
@@ -100,11 +154,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "tA5397cs-EwN"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'train': <PrefetchDataset shapes: ((), ()), types: (tf.string, tf.int64)>, 'test': <PrefetchDataset shapes: ((), ()), types: (tf.string, tf.int64)>, 'unsupervised': <PrefetchDataset shapes: ((), ()), types: (tf.string, tf.int64)>}\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the contents of the dataset you downloaded\n",
     "print(imdb)"
@@ -121,11 +183,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "2NgUwTDu7Q1O"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(<tf.Tensor: shape=(), dtype=string, numpy=b\"This was an absolutely terrible movie. Don't be lured in by Christopher Walken or Michael Ironside. Both are great actors, but this must simply be their worst role in history. Even their great acting could not redeem this movie's ridiculous storyline. This movie is an early nineties US propaganda piece. The most pathetic scenes were those when the Columbian rebels were making their cases for revolutions. Maria Conchita Alonso appeared phony, and her pseudo-love affair with Walken was nothing but a pathetic emotional plug in a movie that was devoid of any real meaning. I am disappointed that there are movies like this, ruining actor's like Christopher Walken's good name. I could barely sit through it.\">, <tf.Tensor: shape=(), dtype=int64, numpy=0>)\n",
+      "(<tf.Tensor: shape=(), dtype=string, numpy=b'I have been known to fall asleep during films, but this is usually due to a combination of things including, really tired, being warm and comfortable on the sette and having just eaten a lot. However on this occasion I fell asleep because the film was rubbish. The plot development was constant. Constantly slow and boring. Things seemed to happen, but with no explanation of what was causing them or why. I admit, I may have missed part of the film, but i watched the majority of it and everything just seemed to happen of its own accord without any real concern for anything else. I cant recommend this film at all.'>, <tf.Tensor: shape=(), dtype=int64, numpy=0>)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-08-12 23:14:00.062908: W tensorflow/core/kernels/data/cache_dataset_ops.cc:768] The calling iterator did not fully read the dataset being cached. In order to avoid unexpected truncation of the dataset, the partially cached contents of the dataset  will be discarded. This can happen if you have an input pipeline similar to `dataset.cache().take(k).repeat()`. You should use `dataset.take(k).cache().repeat()` instead.\n"
+     ]
+    }
+   ],
    "source": [
     "# Take 2 training examples and print its contents\n",
     "for example in imdb['train'].take(2):\n",
@@ -143,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "wHQ2Ko0zl7M4"
    },
@@ -189,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "lggoZqYUGYgX"
    },
@@ -206,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "7n15yyMdmoH1"
    },
@@ -248,11 +326,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "5NEpdhb8AxID"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " embedding (Embedding)       (None, 120, 16)           160000    \n",
+      "                                                                 \n",
+      " flatten (Flatten)           (None, 1920)              0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 6)                 11526     \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 1)                 7         \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 171,533\n",
+      "Trainable params: 171,533\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "\n",
@@ -284,11 +386,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "id": "V5LLrXC-uNX6"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "782/782 [==============================] - 2s 3ms/step - loss: 0.5593 - accuracy: 0.7226 - val_loss: 0.4610 - val_accuracy: 0.8268\n",
+      "Epoch 2/10\n",
+      "782/782 [==============================] - 2s 3ms/step - loss: 0.3342 - accuracy: 0.8984 - val_loss: 0.4441 - val_accuracy: 0.8172\n",
+      "Epoch 3/10\n",
+      "782/782 [==============================] - 3s 4ms/step - loss: 0.1855 - accuracy: 0.9602 - val_loss: 0.4636 - val_accuracy: 0.8118\n",
+      "Epoch 4/10\n",
+      "782/782 [==============================] - 3s 4ms/step - loss: 0.1139 - accuracy: 0.9806 - val_loss: 0.5664 - val_accuracy: 0.8078\n",
+      "Epoch 5/10\n",
+      "782/782 [==============================] - 4s 5ms/step - loss: 0.0817 - accuracy: 0.9863 - val_loss: 0.6168 - val_accuracy: 0.8057\n",
+      "Epoch 6/10\n",
+      "782/782 [==============================] - 4s 5ms/step - loss: 0.0661 - accuracy: 0.9885 - val_loss: 0.6396 - val_accuracy: 0.8058\n",
+      "Epoch 7/10\n",
+      "782/782 [==============================] - 4s 5ms/step - loss: 0.0577 - accuracy: 0.9893 - val_loss: 0.6821 - val_accuracy: 0.8069\n",
+      "Epoch 8/10\n",
+      "782/782 [==============================] - 3s 4ms/step - loss: 0.0544 - accuracy: 0.9894 - val_loss: 0.7364 - val_accuracy: 0.8026\n",
+      "Epoch 9/10\n",
+      "782/782 [==============================] - 3s 4ms/step - loss: 0.0529 - accuracy: 0.9894 - val_loss: 0.7485 - val_accuracy: 0.8069\n",
+      "Epoch 10/10\n",
+      "782/782 [==============================] - 4s 5ms/step - loss: 0.0518 - accuracy: 0.9895 - val_loss: 0.7928 - val_accuracy: 0.8074\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7fb119455fa0>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "num_epochs = 10\n",
     "\n",
@@ -309,11 +448,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "id": "yAmjJqEyCOF_"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10000, 16)\n"
+     ]
+    }
+   ],
    "source": [
     "# Get the embedding layer from the model (i.e. first layer)\n",
     "embedding_layer = model.layers[0]\n",
@@ -348,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "pPhhHqvxvS8f"
    },
@@ -369,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "id": "jmB0Uxk0ycP6"
    },
@@ -412,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "id": "VDeqpOCVydtq"
    },
@@ -459,7 +606,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -473,7 +620,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
