--- a/C3/W3/ungraded_labs/C3_W3_Lab_1_single_layer_LSTM.ipynb
+++ b/C3/W3/ungraded_labs/C3_W3_Lab_1_single_layer_LSTM.ipynb
@@ -38,11 +38,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "AW-4Vo4TMUHb"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:TFDS datasets with text encoding are deprecated and will be removed in a future version. Instead, you should use the plain text version and tokenize the text using `tensorflow_text` (See: https://www.tensorflow.org/tutorials/tensorflow_text/intro#tfdata_example)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1mDownloading and preparing dataset 80.23 MiB (download: 80.23 MiB, generated: Unknown size, total: 80.23 MiB) to ~/tensorflow_datasets/imdb_reviews/subwords8k/1.0.0...\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c224ed3861cc463590f06fcde8545e3c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dl Completed...: 0 url [00:00, ? url/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "edf547726dfb4957930d5edc2e4853c1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dl Size...: 0 MiB [00:00, ? MiB/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating splits...:   0%|          | 0/3 [00:00<?, ? splits/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train examples...:   0%|          | 0/25000 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Shuffling ~/tensorflow_datasets/imdb_reviews/subwords8k/1.0.0.incompleteA4V9JN/imdb_reviews-train.tfrecord*...…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating test examples...:   0%|          | 0/25000 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Shuffling ~/tensorflow_datasets/imdb_reviews/subwords8k/1.0.0.incompleteA4V9JN/imdb_reviews-test.tfrecord*...:…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating unsupervised examples...:   0%|          | 0/50000 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Shuffling ~/tensorflow_datasets/imdb_reviews/subwords8k/1.0.0.incompleteA4V9JN/imdb_reviews-unsupervised.tfrec…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:Dataset is using deprecated text encoder API which will be removed soon. Please use the plain_text version of the dataset and migrate to `tensorflow_text`.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1mDataset imdb_reviews downloaded and prepared to ~/tensorflow_datasets/imdb_reviews/subwords8k/1.0.0. Subsequent calls will reuse this data.\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-08-13 15:43:11.762920: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow_datasets as tfds\n",
     "\n",
@@ -68,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "ffvRUI0_McDS"
    },
@@ -101,11 +264,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "FxQooMEkMgur"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " embedding (Embedding)       (None, None, 64)          523840    \n",
+      "                                                                 \n",
+      " bidirectional (Bidirectiona  (None, 128)              66048     \n",
+      " l)                                                              \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 64)                8256      \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 1)                 65        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 598,209\n",
+      "Trainable params: 598,209\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "\n",
@@ -128,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "Uip7QOVzMoMq"
    },
@@ -151,11 +339,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "7mlgzaRDMtF6"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "98/98 [==============================] - 635s 6s/step - loss: 0.5965 - accuracy: 0.6615 - val_loss: 0.4014 - val_accuracy: 0.8320\n",
+      "Epoch 2/10\n",
+      "98/98 [==============================] - 1351s 14s/step - loss: 0.3233 - accuracy: 0.8734 - val_loss: 0.3608 - val_accuracy: 0.8525\n",
+      "Epoch 3/10\n",
+      "98/98 [==============================] - 1084s 11s/step - loss: 0.2633 - accuracy: 0.9027 - val_loss: 0.4359 - val_accuracy: 0.8147\n",
+      "Epoch 4/10\n",
+      "98/98 [==============================] - 1051s 11s/step - loss: 0.2090 - accuracy: 0.9252 - val_loss: 0.4402 - val_accuracy: 0.8368\n",
+      "Epoch 5/10\n",
+      "98/98 [==============================] - 1087s 11s/step - loss: 0.1711 - accuracy: 0.9406 - val_loss: 0.4394 - val_accuracy: 0.8529\n",
+      "Epoch 6/10\n",
+      "98/98 [==============================] - 1066s 11s/step - loss: 0.1490 - accuracy: 0.9491 - val_loss: 0.4483 - val_accuracy: 0.8463\n",
+      "Epoch 7/10\n",
+      "98/98 [==============================] - 1095s 11s/step - loss: 0.1450 - accuracy: 0.9497 - val_loss: 0.4635 - val_accuracy: 0.8428\n",
+      "Epoch 8/10\n",
+      "98/98 [==============================] - 1061s 11s/step - loss: 0.1140 - accuracy: 0.9625 - val_loss: 0.5038 - val_accuracy: 0.8437\n",
+      "Epoch 9/10\n",
+      "98/98 [==============================] - 1104s 11s/step - loss: 0.1375 - accuracy: 0.9513 - val_loss: 0.5112 - val_accuracy: 0.8016\n",
+      "Epoch 10/10\n",
+      "98/98 [==============================] - 1074s 11s/step - loss: 0.0877 - accuracy: 0.9709 - val_loss: 0.6198 - val_accuracy: 0.8292\n"
+     ]
+    }
+   ],
    "source": [
     "NUM_EPOCHS = 10\n",
     "\n",
@@ -208,7 +423,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -222,7 +437,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
