--- a/C3/W3/ungraded_labs/C3_W3_Lab_2_multiple_layer_LSTM.ipynb
+++ b/C3/W3/ungraded_labs/C3_W3_Lab_2_multiple_layer_LSTM.ipynb
@@ -29,11 +29,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "AW-4Vo4TMUHb"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:TFDS datasets with text encoding are deprecated and will be removed in a future version. Instead, you should use the plain text version and tokenize the text using `tensorflow_text` (See: https://www.tensorflow.org/tutorials/tensorflow_text/intro#tfdata_example)\n",
+      "2022-08-13 15:44:52.443559: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow_datasets as tfds\n",
     "\n",
@@ -55,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "ffvRUI0_McDS"
    },
@@ -88,11 +98,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "18MsI2LU75kH"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "batch_size: 1\n",
+      "timesteps (sequence length): 20\n",
+      "features (embedding size): 16\n",
+      "lstm output units: 8\n",
+      "shape of input array: (1, 20, 16)\n",
+      "shape of lstm output(return_sequences=False): (1, 8)\n",
+      "shape of lstm output(return_sequences=True): (1, 20, 8)\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
@@ -134,11 +158,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "VPNwU1SVyTjm"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " embedding (Embedding)       (None, None, 64)          523840    \n",
+      "                                                                 \n",
+      " bidirectional (Bidirectiona  (None, None, 128)        66048     \n",
+      " l)                                                              \n",
+      "                                                                 \n",
+      " bidirectional_1 (Bidirectio  (None, 64)               41216     \n",
+      " nal)                                                            \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 64)                4160      \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 1)                 65        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 635,329\n",
+      "Trainable params: 635,329\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "\n",
@@ -163,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "Uip7QOVzMoMq"
    },
@@ -186,11 +238,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "7mlgzaRDMtF6"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "98/98 [==============================] - 1783s 18s/step - loss: 0.5827 - accuracy: 0.6675 - val_loss: 0.5405 - val_accuracy: 0.7629\n",
+      "Epoch 2/10\n",
+      "98/98 [==============================] - 1493s 15s/step - loss: 0.3585 - accuracy: 0.8546 - val_loss: 0.4062 - val_accuracy: 0.8262\n",
+      "Epoch 3/10\n",
+      "98/98 [==============================] - 1625s 17s/step - loss: 0.2939 - accuracy: 0.8876 - val_loss: 0.4787 - val_accuracy: 0.7845\n",
+      "Epoch 4/10\n",
+      "98/98 [==============================] - 1563s 16s/step - loss: 0.2661 - accuracy: 0.8974 - val_loss: 0.4132 - val_accuracy: 0.8387\n",
+      "Epoch 5/10\n",
+      "98/98 [==============================] - 1548s 16s/step - loss: 0.1708 - accuracy: 0.9424 - val_loss: 0.4592 - val_accuracy: 0.8466\n",
+      "Epoch 6/10\n",
+      "98/98 [==============================] - 1569s 16s/step - loss: 0.1245 - accuracy: 0.9589 - val_loss: 0.5051 - val_accuracy: 0.8369\n",
+      "Epoch 7/10\n",
+      "98/98 [==============================] - 1281s 13s/step - loss: 0.0903 - accuracy: 0.9728 - val_loss: 0.6125 - val_accuracy: 0.8332\n",
+      "Epoch 8/10\n",
+      "98/98 [==============================] - 9092s 94s/step - loss: 0.2135 - accuracy: 0.9112 - val_loss: 0.7011 - val_accuracy: 0.6028\n",
+      "Epoch 9/10\n",
+      "98/98 [==============================] - 1073s 11s/step - loss: 0.4841 - accuracy: 0.7686 - val_loss: 0.5548 - val_accuracy: 0.7317\n",
+      "Epoch 10/10\n",
+      "98/98 [==============================] - 1031s 11s/step - loss: 0.3562 - accuracy: 0.8565 - val_loss: 0.4946 - val_accuracy: 0.7927\n"
+     ]
+    }
+   ],
    "source": [
     "NUM_EPOCHS = 10\n",
     "\n",
@@ -243,7 +322,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -257,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
