--- a/C3/W3/ungraded_labs/C3_W3_Lab_5_sarcasm_with_bi_LSTM.ipynb
+++ b/C3/W3/ungraded_labs/C3_W3_Lab_5_sarcasm_with_bi_LSTM.ipynb
@@ -31,11 +31,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "k_Wlz9i10Dmn"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2022-08-13 21:26:05--  https://storage.googleapis.com/tensorflow-1-public/course3/sarcasm.json\n",
+      "Resolving storage.googleapis.com (storage.googleapis.com)... 2607:f8b0:400a:80b::2010, 2607:f8b0:400a:800::2010, 2607:f8b0:400a:801::2010, ...\n",
+      "Connecting to storage.googleapis.com (storage.googleapis.com)|2607:f8b0:400a:80b::2010|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 5643545 (5.4M) [application/json]\n",
+      "Saving to: ‘sarcasm.json’\n",
+      "\n",
+      "sarcasm.json        100%[===================>]   5.38M  3.63MB/s    in 1.5s    \n",
+      "\n",
+      "2022-08-13 21:26:07 (3.63 MB/s) - ‘sarcasm.json’ saved [5643545/5643545]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Download the dataset\n",
     "!wget https://storage.googleapis.com/tensorflow-1-public/course3/sarcasm.json"
@@ -43,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "Pr4R0I240GOh"
    },
@@ -78,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "50H0ZrJf035i"
    },
@@ -108,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "hodsUZib1Ce7"
    },
@@ -157,11 +175,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "jGwXGIXvFhXW"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-08-13 21:27:13.922552: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " embedding (Embedding)       (None, 120, 16)           160000    \n",
+      "                                                                 \n",
+      " bidirectional (Bidirectiona  (None, 64)               12544     \n",
+      " l)                                                              \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 24)                1560      \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 1)                 25        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 174,129\n",
+      "Trainable params: 174,129\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "\n",
@@ -196,14 +247,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "background_save": true
     },
     "id": "nEKV8EMj11BW"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "625/625 [==============================] - 29s 41ms/step - loss: 0.4209 - accuracy: 0.7929 - val_loss: 0.3292 - val_accuracy: 0.8565\n",
+      "Epoch 2/10\n",
+      "625/625 [==============================] - 23s 37ms/step - loss: 0.2207 - accuracy: 0.9083 - val_loss: 0.3481 - val_accuracy: 0.8504\n",
+      "Epoch 3/10\n",
+      "625/625 [==============================] - 23s 37ms/step - loss: 0.1398 - accuracy: 0.9468 - val_loss: 0.3778 - val_accuracy: 0.8539\n",
+      "Epoch 4/10\n",
+      "625/625 [==============================] - 22s 36ms/step - loss: 0.0851 - accuracy: 0.9699 - val_loss: 0.4744 - val_accuracy: 0.8484\n",
+      "Epoch 5/10\n",
+      "625/625 [==============================] - 23s 36ms/step - loss: 0.0524 - accuracy: 0.9836 - val_loss: 0.5891 - val_accuracy: 0.8436\n",
+      "Epoch 6/10\n",
+      "625/625 [==============================] - 23s 36ms/step - loss: 0.0350 - accuracy: 0.9887 - val_loss: 0.6725 - val_accuracy: 0.8411\n",
+      "Epoch 7/10\n",
+      "625/625 [==============================] - 24s 39ms/step - loss: 0.0243 - accuracy: 0.9924 - val_loss: 0.8182 - val_accuracy: 0.8386\n",
+      "Epoch 8/10\n",
+      "625/625 [==============================] - 23s 36ms/step - loss: 0.0193 - accuracy: 0.9941 - val_loss: 0.8612 - val_accuracy: 0.8362\n",
+      "Epoch 9/10\n",
+      "625/625 [==============================] - 26s 42ms/step - loss: 0.0142 - accuracy: 0.9959 - val_loss: 0.8946 - val_accuracy: 0.8320\n",
+      "Epoch 10/10\n",
+      "625/625 [==============================] - 28s 45ms/step - loss: 0.0116 - accuracy: 0.9962 - val_loss: 0.9955 - val_accuracy: 0.8335\n"
+     ]
+    }
+   ],
    "source": [
     "NUM_EPOCHS = 10\n",
     "\n",
@@ -245,7 +323,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -259,7 +337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
